[package]
name = "roguelike2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["serialize"] }
bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap.git" }
rand = "0.8"
ron = "0.6"
serde = "1.0"
